# PaddleData

./: CMakeLists.txt  README.md  setup.py
paddledata/: CMakeLists.txt  ops.py
paddledata/decode/: CMakeLists.txt  decode.cc  image_decoder.cc  image_decoder.h  random_roi_generator.cc  random_roi_generator.h
paddledata/src/decode/: CMakeLists.txt  decode.cc  decode.cu  image_decoder.cc  image_decoder.cu  image_decoder.h  random_roi_generator.cc  random_roi_generator.h
